--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 POE::Component::DHCP::Monitor
 =============================
 
+1.00	Mon Apr  6 22:38:14 BST 2009
+	- Bump version to a 'stable' release
+	- auto set repository in META.yml
+
 0.12	Sat May 17 13:35:16 BST 2008
 	- Remove kwalitee test and added license information
 
