Make auto_set_repository() only run at author-time

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 POE::Component::DHCP::Monitor
 =============================
 
+1.02	Wed Apr  8 12:14:59 BST 2009
+	- Make auto_set_repository() only run at author-time
+
 1.00	Mon Apr  6 22:38:14 BST 2009
 	- Bump version to a 'stable' release
 	- auto set repository in META.yml
